--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="offer__slide">
                         <img src="img/slider/pepper.jpg" alt="pepper">
                     </div>
-                    <!-- <div class="offer__slide">
+                   <div class="offer__slide">
                         <img src="img/slider/food-12.jpg" alt="food">
                     </div>
                     <div class="offer__slide">
@@ -124,7 +124,7 @@
                     </div>
                     <div class="offer__slide">
                         <img src="img/slider/paprika.jpg" alt="paprika">
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
@@ -186,7 +186,10 @@
         <div class="menu__field">
             <div class="container">
            
-                
+                <!-- Пушим сюда -->
+                <!-- Используем классы для карточек--> 
+                 <!-- Пушим сюда -->
+
             </div>
         </div>
     </div>
